# id01-sxdm-utils

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  spawn.txt  tox.ini
doc/api-source/: sxdm.io.rst  sxdm.rst  sxdm.utils.rst  sxdm.widgets.rst
doc/jupyter_execute/notebook_templates/: experiment_live_inspect.ipynb
doc/source/: _tests.md  api.md  conf.py  examples.md  index.md  install.md  io.bliss.md  io.md  plot.md  publist.md  user_guide.md  utils.bliss.md  utils.md  widgets.md
doc/source/apidocs/: index.rst
doc/source/apidocs/sxdm/: sxdm.io.bliss.md  sxdm.io.bliss.rst  sxdm.io.md  sxdm.io.rst  sxdm.io.spec.md  sxdm.io.spec.rst  sxdm.io.utils.md  sxdm.io.utils.rst  sxdm.io.xsocs.md  sxdm.io.xsocs.rst  sxdm.md  sxdm.plot.colors.md  sxdm.plot.colors.rst  sxdm.plot.md  sxdm.plot.rst  sxdm.plot.utils.md  sxdm.plot.utils.rst  sxdm.process.math.md  sxdm.process.math.rst  sxdm.process.md  (+30 more)
doc/source/examples/: 4D-SXDM_tutorial-BLISS.ipynb  5D-SXDM_tutorial-BLISS.ipynb  RSM_tutorial.ipynb
doc/source/notebook_templates/: experiment_live_inspect.ipynb
examples/: 2D-SXDM_tutorial-BLISS.ipynb  2D-SXDM_tutorial.ipynb  3D-SXDM_tutorial-BLISS.ipynb  4D-SXDM_tutorial-BLISS.ipynb  4D-SXDM_tutorial.ipynb  5D-SXDM_example_InGaN_104.ipynb  5DSXDM_SAG_135.ipynb  ALIGNMENT_2021_03_14_140646_fast_00004.spec  _test_bokeh.ipynb  _test_dmesh.ipynb  _test_various.ipynb  _test_widget.ipynb  compute_reflections.ipynb
id01_sxdm_utils.egg-info/: PKG-INFO  SOURCES.txt
notebook_templates/: experiment_live_inspect.ipynb
public/: CHANGELOG  setup.py
public/doc/api-source/: conf.py  sxdm.io.rst  sxdm.process.rst  sxdm.rst  sxdm.utils.rst  sxdm.widgets.bliss.rst  sxdm.widgets.rst
public/doc/source/: io.spec.md
public/examples/: 2D-SXDM_tutorial-BLISS.ipynb
public/id01_sxdm_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
public/scripts/: bliss_to_xsocs.py  bliss_to_xsocs_stitch.py
public/sxdm/: plot.py
public/sxdm/io/: xsocs.py
public/sxdm/process/: xsocs.py
public/sxdm/widgets/: spec.py  xsocs.py
scripts/: bliss_to_xsocs.py  bliss_to_xsocs_stitch.py
scripts/test/: _test_bokeh.ipynb  _test_calc_roi_sum.ipynb  _test_qspace_avg.ipynb  _test_widget-shift.ipynb  _test_widget.ipynb  xsocs_qconvert.py  xsocs_shift.py
sxdm/: __init__.py  bliss.py  io.py  math.py  plot.py  utils.py  widgets.py
sxdm/bliss/: __init__.py  io.py  utils.py  widgets.py
sxdm/io/: __init__.py  bliss.py  spec.py  utils.py  xsocs.py
sxdm/plot/: __init__.py  colors.py  utils.py
sxdm/process/: __init__.py  math.py  xsocs.py
sxdm/tests/: widgets.py
sxdm/utils/: __init__.py  bliss.py  general.py  nanomax.py  spec.py
sxdm/widgets/: Inspect4DArray.py  __init__.py  bliss.py  spec.py  xsocs.py
sxdm/widgets/bliss/: GetShift.py  Inspect4DSXDM.py  InspectROI.py  InspectROIBokeh.py  InspectSXDMCounter.py  __init__.py
tests/: _test_calc_roi_sum.ipynb  _test_qspace_avg.ipynb  _test_widget.ipynb  test_sxdm.py  test_xsocs.py  xsocs_qconvert.py  xsocs_shift.py
tests/plot/: test_utils.py
(+16 files in other folders)
