[tool.poetry]
name = "id01-sxdm"
version = "0.1.0"
homepage = "https://gitlab.esrf.fr/id01-science/id01-sxdm-utils"
repository = "https://gitlab.esrf.fr/id01-science/id01-sxdm-utils"
documentation = "https://id01-science.gitlab-pages.esrf.fr/id01-sxdm-utils/"

description = "Treat Scanning X-ray Diffraction Microscopy data collected on beamline ID01 at ESRF"
authors = ["Edoardo Zatterin <ezatterin@yahoo.it>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sxdm"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
ipywidgets = "^8.1.5"
gif = "^23.3.0"
tqdm = "^4.67.1"
silx = "^2.1.2"
pandas = "^2.2.3"
xrayutilities = "^1.7.8"
ipympl = "^0.9.4"
scikit-image = "^0.24.0"
hdf5plugin = "^5.0.0"
xsocs = {git = "http://gitlab.esrf.fr/zatterin/xsocs.git"}
id01-core = {git = "https://gitlab.esrf.fr/id01-science/id01-core.git"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
