[project]
name = "id01-sxdm"
version = "0.1.0"
description = "Treat Scanning X-ray Diffraction Microscopy data collected on beamline ID01 at ESRF"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "Edoardo Zatterin", email = "ezatterin@yahoo.it" }]
dynamic = ["dependencies"]

[project.urls]
homepage = "https://gitlab.esrf.fr/id01-science/id01-sxdm-utils"
repository = "https://gitlab.esrf.fr/id01-science/id01-sxdm-utils"
documentation = "https://id01-science.gitlab-pages.esrf.fr/id01-sxdm-utils/"

[tool.poetry]
packages = [{ include = "sxdm" }]

[tool.poetry.dependencies]
numpy = "^2.1.3"
matplotlib = "3.9.3"
ipywidgets = "^8.1.5"
gif = "^23.3.0"
tqdm = "^4.67.1"
silx = "^2.1.2"
pandas = "^2.2.3"
xrayutilities = "^1.7.8"
ipympl = "0.9.4"
scikit-image = "^0.24.0"
hdf5plugin = "^5.0.0"
id01-core = { git = "https://gitlab.esrf.fr/id01-science/id01-core.git", develop = true }
xsocs = { git = "https://gitlab.esrf.fr/zatterin/xsocs.git" }
ipykernel = "^6.29.5"
h5glance = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-sugar = "^1.0.0"
nbdev = "^2.3.34"
ruff = "^0.8.2"
ipyvolume = "^0.6.3"
ipykernel = "^6.29.5"
black = "^25.1.0"


[tool.poetry.group.doc.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.0"
furo = "^2024.8.6"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.1"
myst-nb = "^1.1.2"
sphinx-autodoc2 = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

# https://docs.astral.sh/ruff/linter/#ruff-check
[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401", "E501"]
exclude = ["*.ipynb"]

[tool.ruff.format]
exclude = ['*.ipynb']

[tool.poetry.repositories.gitlab]
url = "https://gitlab.esrf.fr/api/v4/projects/${CI_PROJECT_ID}/packages/pypi/simple"